# soundyrust

./: Cargo.toml
examples/: live_playing.rs  midi_octave.rs  midi_with_multiple_channels.rs  multiple_tracks.rs  queued_tracks.rs  with_channel_patch.rs
src/: lib.rs  midi.rs  notes.rs  source.rs
