[package]
name = "soundyrust"
version = "0.3.0"
edition = "2024"

[lints.clippy]
eq_op = "allow"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
	"bevy_audio",
	"bevy_asset",
] }
augmented-midi = "1.8.0"
itertools = "0.14.0"
rustysynth = "1.3.2, <1.3.6" # 1.3.6 breaks
num_enum = "0.7.3"

[lib]
name = "soundyrust"
path = "src/lib.rs"
