[package]
name = "soundyrust"
version = "0.4.0"
edition = "2024"

[lib]
name = "soundyrust"
path = "src/lib.rs"

[dependencies]
augmented-midi = "1.8.0"
bevy = { version = "0.18", default-features = false, features = [
  "bevy_asset",
  "bevy_audio",
] }
itertools = "0.14.0"
num_enum = "0.7.3"
rustysynth = "1.3.2, <1.3.6"  # 1.3.6 breaks

[lints.clippy]
eq_op = "allow"
